# recsys_project

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: EDA.ipynb
scripts/: download_dataset.py
src/utils/: logger.py
