[project]
name = "recsys-project"
version = "0.1.0"
description = ""
authors = [
    {name = "t.me/kumprum"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.4"
ipykernel = "^6.29.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"
pre-commit = "^4.2.0"

